is_active_output stopped working correctly #96396

Closed
opened 2022-03-13 11:30:02 +01:00 by Miro Horváth · 11 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.09

Blender Version
Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e , 3.2 broken as well
Worked: Blender 3.0 release
Caused by 7e712b2d6a

Exact steps for others to reproduce the error

  • open bug.blend, you should see blue cube
  • run the script, which should set "Red" Group Output as active and Cube should change to red color, but Green is set instead
  • you can see in the System Console that bpy.data.node_groups["A"].nodes["Red"].is_active_output is still False

Works as expected in 3.0

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.09 **Blender Version** Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: `c77597cd0e` , 3.2 broken as well Worked: Blender 3.0 release Caused by 7e712b2d6a **Exact steps for others to reproduce the error** - open [bug.blend](https://archive.blender.org/developer/F12924973/bug.blend), you should see blue cube - run the script, which should set "Red" Group Output as active and Cube should change to red color, but Green is set instead - you can see in the System Console that **bpy.data.node_groups["A"].nodes["Red"].is_active_output** is still **False** Works as expected in 3.0
Author

Added subscriber: @MiroHorvath

Added subscriber: @MiroHorvath
Member

Added subscriber: @JulienDuroure

Added subscriber: @JulienDuroure
Author

Also changing active Group Output by clicking on it in Shader Editor and running script right away is giving wrong result as well.

Also changing active Group Output by clicking on it in Shader Editor and running script right away is giving wrong result as well.
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Hi, thanks for the report. I can confirm on latest master.
This is very similar to the other report which was fixed last week- #96292 (Unable to set active material output node using Python)
cc @JacquesLucke

Hi, thanks for the report. I can confirm on latest master. This is very similar to the other report which was fixed last week- #96292 (Unable to set active material output node using Python) cc @JacquesLucke

This issue was referenced by b125046c75

This issue was referenced by b125046c754aa23ca5abb73c7eea10c916d2edcb

This issue was referenced by 82e7956f12

This issue was referenced by 82e7956f12aa4ee06cb27d902cc5c518af1ef177
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-03-14 10:22:35 +01:00
Member

@JacquesLucke hi, any thoughts on backporting both the commits for corrective release?

@JacquesLucke hi, any thoughts on backporting both the commits for corrective release? - 82e7956f12 - 22a341d9d8
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96396
No description provided.