Fix T96396: cannot set active node group output with Python

This is essentially the same fix as in rB22a341d9d8d3d337f79df228ab2e4e0726f81430.